# barohead

./: .gitignore  Cargo.toml  flake.nix  regen-index.sh  release.sh
barohead/: .gitignore  Cargo.toml  index.html  styles.scss
barohead/src/: app.rs  data.rs  db.rs  main.rs  routes.rs
barohead/src/components/: item_search.rs  item_thumbnail.rs  item_view.rs  mod.rs  nav.rs  pricing.rs  show_deconstruct.rs  show_fabricate.rs  show_process.rs
barohead/src/widgets/: mod.rs  text_input.rs
barohead_data/: Cargo.toml
barohead_data/src/items/: mod.rs
build-indexes/: .rubocop.yml  Gemfile  gemset.nix  main.rb
pack-index/: Cargo.toml
pack-index/src/: main.rs
