[package]
name = "barohead"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
barohead_data = { path = "../barohead_data" }
bincode = "1.3.3"
console_error_panic_hook = "0.1.2"
fuzzy-matcher = "*"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"
